# Coral_Key_in_Three_Hour_Epochs

./: .cursorrules  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  ecology_reef_tots_spec_v2.md  pyproject.toml  run_coral_key_baselines.py
.agents/skills/coral-key/: SKILL.md
.devin/skills/: SKILL.md
.github/workflows/: ci.yml
baselines/: README.md  coral_key_baselines_config.json  run_coral_key_baselines.py
configs/: tattletots_integration.json
docs/: COORDINATION.md
scripts/: run_with_tattletots.py
src/coral_key/: __init__.py  adapter.py  cli.py  config.py  metrics.py  runner.py  users.py
src/coral_key/adversary/: __init__.py  interference.py  iuu.py
src/coral_key/baselines/: __init__.py  architectures.py
src/coral_key/fleet/: __init__.py  behavior.py  vessel.py
src/coral_key/ocean/: __init__.py  fish_stock.py  grid.py  oceanography.py
src/coral_key/sensors/: __init__.py  ais.py  catch_reports.py  edna.py  electronic_monitoring.py  oceanographic.py  sar.py
tests/: conftest.py  test_adapter.py  test_integration.py  test_metrics.py  test_runner.py  test_smoke.py
tests/test_adversary/: test_interference.py  test_iuu.py
tests/test_baselines/: test_architectures.py
tests/test_fleet/: test_behavior.py  test_vessel.py
tests/test_ocean/: test_fish_stock.py  test_grid.py  test_oceanography.py
tests/test_sensors/: test_ais.py  test_catch_reports.py  test_sar.py
